package com.example;

public class MenuItem {
    String name;
    String category;
    double price;

    public MenuItem(String name, String category, double price) {
        this.name = name;
        this.category = category;
        this.price = price;
    }
}
